// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`kol-input-radio should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Value" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _accessKey="V" 1`] = `
<kol-input-radio _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <fieldset class="fieldset kol-input kol-input-radio msg-type-error vertical" role="presentation">
      <legend class="block input-label leading-normal mb-1 w-full" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          Label
          <span aria-hidden="true" class="access-key-hint">
            V
          </span>
        </span>
      </legend>
      <div class="disabled kol-input" role="presentation">
        <div class="radio-input-wrapper">
          <input accesskey="V" autocapitalize="off" autocorrect="off" class="disabled radio" disabled="" id="id-nonce" name="field" type="radio" value="-0">
          <label class="radio-label" htmlfor="id-nonce-0">
            <span>
              <span class="radio-label-span-inner">
                Frau
              </span>
            </span>
          </label>
        </div>
      </div>
      <div class="kol-input" role="presentation">
        <div class="radio-input-wrapper">
          <input accesskey="V" autocapitalize="off" autocorrect="off" class="radio" id="id-nonce" name="field" type="radio" value="-1">
          <label class="radio-label" htmlfor="id-nonce-1">
            <span>
              <span class="radio-label-span-inner">
                Herr
              </span>
            </span>
          </label>
        </div>
      </div>
      <div class="kol-input" role="presentation">
        <div class="radio-input-wrapper">
          <input accesskey="V" autocapitalize="off" autocorrect="off" class="radio" id="id-nonce" name="field" type="radio" value="-2">
          <label class="radio-label" htmlfor="id-nonce-2">
            <span>
              <span class="radio-label-span-inner">
                Divers
              </span>
            </span>
          </label>
        </div>
      </div>
    </fieldset>
  </template>
</kol-input-radio>
`;

exports[`kol-input-radio should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Value" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _alert=true 1`] = `
<kol-input-radio _alert="" _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <fieldset class="fieldset kol-input kol-input-radio msg-type-error vertical" role="presentation">
      <legend class="block input-label leading-normal mb-1 w-full" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </legend>
      <div class="disabled kol-input" role="presentation">
        <div class="radio-input-wrapper">
          <input autocapitalize="off" autocorrect="off" class="disabled radio" disabled="" id="id-nonce" name="field" type="radio" value="-0">
          <label class="radio-label" htmlfor="id-nonce-0">
            <span>
              <span class="radio-label-span-inner">
                Frau
              </span>
            </span>
          </label>
        </div>
      </div>
      <div class="kol-input" role="presentation">
        <div class="radio-input-wrapper">
          <input autocapitalize="off" autocorrect="off" class="radio" id="id-nonce" name="field" type="radio" value="-1">
          <label class="radio-label" htmlfor="id-nonce-1">
            <span>
              <span class="radio-label-span-inner">
                Herr
              </span>
            </span>
          </label>
        </div>
      </div>
      <div class="kol-input" role="presentation">
        <div class="radio-input-wrapper">
          <input autocapitalize="off" autocorrect="off" class="radio" id="id-nonce" name="field" type="radio" value="-2">
          <label class="radio-label" htmlfor="id-nonce-2">
            <span>
              <span class="radio-label-span-inner">
                Divers
              </span>
            </span>
          </label>
        </div>
      </div>
    </fieldset>
  </template>
</kol-input-radio>
`;

exports[`kol-input-radio should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Value" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _disabled=true 1`] = `
<kol-input-radio _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <fieldset class="disabled fieldset kol-input kol-input-radio msg-type-error vertical" role="presentation">
      <legend class="block input-label leading-normal mb-1 w-full" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </legend>
      <div class="disabled kol-input" role="presentation">
        <div class="radio-input-wrapper">
          <input autocapitalize="off" autocorrect="off" class="disabled radio" disabled="" id="id-nonce" name="field" type="radio" value="-0">
          <label class="radio-label" htmlfor="id-nonce-0">
            <span>
              <span class="radio-label-span-inner">
                Frau
              </span>
            </span>
          </label>
        </div>
      </div>
      <div class="disabled kol-input" role="presentation">
        <div class="radio-input-wrapper">
          <input autocapitalize="off" autocorrect="off" class="disabled radio" disabled="" id="id-nonce" name="field" type="radio" value="-1">
          <label class="radio-label" htmlfor="id-nonce-1">
            <span>
              <span class="radio-label-span-inner">
                Herr
              </span>
            </span>
          </label>
        </div>
      </div>
      <div class="disabled kol-input" role="presentation">
        <div class="radio-input-wrapper">
          <input autocapitalize="off" autocorrect="off" class="disabled radio" disabled="" id="id-nonce" name="field" type="radio" value="-2">
          <label class="radio-label" htmlfor="id-nonce-2">
            <span>
              <span class="radio-label-span-inner">
                Divers
              </span>
            </span>
          </label>
        </div>
      </div>
    </fieldset>
  </template>
</kol-input-radio>
`;

exports[`kol-input-radio should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Value" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _hint="Hint" 1`] = `
<kol-input-radio _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <fieldset class="fieldset kol-input kol-input-radio msg-type-error vertical" role="presentation">
      <legend class="block input-label leading-normal mb-1 w-full" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </legend>
      <div class="disabled kol-input" role="presentation">
        <div class="radio-input-wrapper">
          <input aria-describedby="id-nonce-hint" autocapitalize="off" autocorrect="off" class="disabled radio" disabled="" id="id-nonce" name="field" type="radio" value="-0">
          <label class="radio-label" htmlfor="id-nonce-0">
            <span>
              <span class="radio-label-span-inner">
                Frau
              </span>
            </span>
          </label>
        </div>
      </div>
      <div class="kol-input" role="presentation">
        <div class="radio-input-wrapper">
          <input aria-describedby="id-nonce-hint" autocapitalize="off" autocorrect="off" class="radio" id="id-nonce" name="field" type="radio" value="-1">
          <label class="radio-label" htmlfor="id-nonce-1">
            <span>
              <span class="radio-label-span-inner">
                Herr
              </span>
            </span>
          </label>
        </div>
      </div>
      <div class="kol-input" role="presentation">
        <div class="radio-input-wrapper">
          <input aria-describedby="id-nonce-hint" autocapitalize="off" autocorrect="off" class="radio" id="id-nonce" name="field" type="radio" value="-2">
          <label class="radio-label" htmlfor="id-nonce-2">
            <span>
              <span class="radio-label-span-inner">
                Divers
              </span>
            </span>
          </label>
        </div>
      </div>
      <span class="hint" id="undefined-hint">
        Hint
      </span>
    </fieldset>
  </template>
</kol-input-radio>
`;

exports[`kol-input-radio should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Value" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _icons={"left":{"icon":"codicon codicon-arrow-left"},"right":{"icon":"codicon codicon-arrow-right"}} 1`] = `
<kol-input-radio _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <fieldset class="fieldset kol-input kol-input-radio msg-type-error vertical" role="presentation">
      <legend class="block input-label leading-normal mb-1 w-full" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </legend>
      <div class="disabled kol-input" role="presentation">
        <div class="radio-input-wrapper">
          <input autocapitalize="off" autocorrect="off" class="disabled radio" disabled="" id="id-nonce" name="field" type="radio" value="-0">
          <label class="radio-label" htmlfor="id-nonce-0">
            <span>
              <span class="radio-label-span-inner">
                Frau
              </span>
            </span>
          </label>
        </div>
      </div>
      <div class="kol-input" role="presentation">
        <div class="radio-input-wrapper">
          <input autocapitalize="off" autocorrect="off" class="radio" id="id-nonce" name="field" type="radio" value="-1">
          <label class="radio-label" htmlfor="id-nonce-1">
            <span>
              <span class="radio-label-span-inner">
                Herr
              </span>
            </span>
          </label>
        </div>
      </div>
      <div class="kol-input" role="presentation">
        <div class="radio-input-wrapper">
          <input autocapitalize="off" autocorrect="off" class="radio" id="id-nonce" name="field" type="radio" value="-2">
          <label class="radio-label" htmlfor="id-nonce-2">
            <span>
              <span class="radio-label-span-inner">
                Divers
              </span>
            </span>
          </label>
        </div>
      </div>
    </fieldset>
  </template>
</kol-input-radio>
`;

exports[`kol-input-radio should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Value" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _icons={"left":{"icon":"codicon codicon-arrow-left"}} 1`] = `
<kol-input-radio _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <fieldset class="fieldset kol-input kol-input-radio msg-type-error vertical" role="presentation">
      <legend class="block input-label leading-normal mb-1 w-full" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </legend>
      <div class="disabled kol-input" role="presentation">
        <div class="radio-input-wrapper">
          <input autocapitalize="off" autocorrect="off" class="disabled radio" disabled="" id="id-nonce" name="field" type="radio" value="-0">
          <label class="radio-label" htmlfor="id-nonce-0">
            <span>
              <span class="radio-label-span-inner">
                Frau
              </span>
            </span>
          </label>
        </div>
      </div>
      <div class="kol-input" role="presentation">
        <div class="radio-input-wrapper">
          <input autocapitalize="off" autocorrect="off" class="radio" id="id-nonce" name="field" type="radio" value="-1">
          <label class="radio-label" htmlfor="id-nonce-1">
            <span>
              <span class="radio-label-span-inner">
                Herr
              </span>
            </span>
          </label>
        </div>
      </div>
      <div class="kol-input" role="presentation">
        <div class="radio-input-wrapper">
          <input autocapitalize="off" autocorrect="off" class="radio" id="id-nonce" name="field" type="radio" value="-2">
          <label class="radio-label" htmlfor="id-nonce-2">
            <span>
              <span class="radio-label-span-inner">
                Divers
              </span>
            </span>
          </label>
        </div>
      </div>
    </fieldset>
  </template>
</kol-input-radio>
`;

exports[`kol-input-radio should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Value" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _icons={"right":{"icon":"codicon codicon-arrow-right"}} 1`] = `
<kol-input-radio _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <fieldset class="fieldset kol-input kol-input-radio msg-type-error vertical" role="presentation">
      <legend class="block input-label leading-normal mb-1 w-full" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </legend>
      <div class="disabled kol-input" role="presentation">
        <div class="radio-input-wrapper">
          <input autocapitalize="off" autocorrect="off" class="disabled radio" disabled="" id="id-nonce" name="field" type="radio" value="-0">
          <label class="radio-label" htmlfor="id-nonce-0">
            <span>
              <span class="radio-label-span-inner">
                Frau
              </span>
            </span>
          </label>
        </div>
      </div>
      <div class="kol-input" role="presentation">
        <div class="radio-input-wrapper">
          <input autocapitalize="off" autocorrect="off" class="radio" id="id-nonce" name="field" type="radio" value="-1">
          <label class="radio-label" htmlfor="id-nonce-1">
            <span>
              <span class="radio-label-span-inner">
                Herr
              </span>
            </span>
          </label>
        </div>
      </div>
      <div class="kol-input" role="presentation">
        <div class="radio-input-wrapper">
          <input autocapitalize="off" autocorrect="off" class="radio" id="id-nonce" name="field" type="radio" value="-2">
          <label class="radio-label" htmlfor="id-nonce-2">
            <span>
              <span class="radio-label-span-inner">
                Divers
              </span>
            </span>
          </label>
        </div>
      </div>
    </fieldset>
  </template>
</kol-input-radio>
`;

exports[`kol-input-radio should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Value" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _msg={"_type":"error","_description":"Es ist ein Fehler aufgetreten"} _hideError=true 1`] = `
<kol-input-radio _hide-error="" _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <fieldset class="fieldset hidden-error kol-input kol-input-radio msg-type-error vertical" role="presentation">
      <legend class="block input-label leading-normal mb-1 w-full" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </legend>
      <div class="disabled hidden-error kol-input" role="presentation">
        <div class="radio-input-wrapper">
          <input autocapitalize="off" autocorrect="off" class="disabled radio" disabled="" id="id-nonce" name="field" type="radio" value="-0">
          <label class="radio-label" htmlfor="id-nonce-0">
            <span>
              <span class="radio-label-span-inner">
                Frau
              </span>
            </span>
          </label>
        </div>
      </div>
      <div class="hidden-error kol-input" role="presentation">
        <div class="radio-input-wrapper">
          <input autocapitalize="off" autocorrect="off" class="radio" id="id-nonce" name="field" type="radio" value="-1">
          <label class="radio-label" htmlfor="id-nonce-1">
            <span>
              <span class="radio-label-span-inner">
                Herr
              </span>
            </span>
          </label>
        </div>
      </div>
      <div class="hidden-error kol-input" role="presentation">
        <div class="radio-input-wrapper">
          <input autocapitalize="off" autocorrect="off" class="radio" id="id-nonce" name="field" type="radio" value="-2">
          <label class="radio-label" htmlfor="id-nonce-2">
            <span>
              <span class="radio-label-span-inner">
                Divers
              </span>
            </span>
          </label>
        </div>
      </div>
    </fieldset>
  </template>
</kol-input-radio>
`;

exports[`kol-input-radio should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Value" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _msg={"_type":"error","_description":"Es ist ein Fehler aufgetreten"} 1`] = `
<kol-input-radio _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <fieldset class="fieldset kol-input kol-input-radio msg-type-error vertical" role="presentation">
      <legend class="block input-label leading-normal mb-1 w-full" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </legend>
      <div class="disabled kol-input" role="presentation">
        <div class="radio-input-wrapper">
          <input autocapitalize="off" autocorrect="off" class="disabled radio" disabled="" id="id-nonce" name="field" type="radio" value="-0">
          <label class="radio-label" htmlfor="id-nonce-0">
            <span>
              <span class="radio-label-span-inner">
                Frau
              </span>
            </span>
          </label>
        </div>
      </div>
      <div class="kol-input" role="presentation">
        <div class="radio-input-wrapper">
          <input autocapitalize="off" autocorrect="off" class="radio" id="id-nonce" name="field" type="radio" value="-1">
          <label class="radio-label" htmlfor="id-nonce-1">
            <span>
              <span class="radio-label-span-inner">
                Herr
              </span>
            </span>
          </label>
        </div>
      </div>
      <div class="kol-input" role="presentation">
        <div class="radio-input-wrapper">
          <input autocapitalize="off" autocorrect="off" class="radio" id="id-nonce" name="field" type="radio" value="-2">
          <label class="radio-label" htmlfor="id-nonce-2">
            <span>
              <span class="radio-label-span-inner">
                Divers
              </span>
            </span>
          </label>
        </div>
      </div>
    </fieldset>
  </template>
</kol-input-radio>
`;

exports[`kol-input-radio should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Value" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _orientation="horizontal" _accessKey="V" 1`] = `
<kol-input-radio _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <fieldset class="fieldset horizontal kol-input kol-input-radio msg-type-error" role="presentation">
      <legend class="block input-label leading-normal mb-1 w-full" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          Label
          <span aria-hidden="true" class="access-key-hint">
            V
          </span>
        </span>
      </legend>
      <div class="disabled kol-input" role="presentation">
        <div class="radio-input-wrapper">
          <input accesskey="V" autocapitalize="off" autocorrect="off" class="disabled radio" disabled="" id="id-nonce" name="field" type="radio" value="-0">
          <label class="radio-label" htmlfor="id-nonce-0">
            <span>
              <span class="radio-label-span-inner">
                Frau
              </span>
            </span>
          </label>
        </div>
      </div>
      <div class="kol-input" role="presentation">
        <div class="radio-input-wrapper">
          <input accesskey="V" autocapitalize="off" autocorrect="off" class="radio" id="id-nonce" name="field" type="radio" value="-1">
          <label class="radio-label" htmlfor="id-nonce-1">
            <span>
              <span class="radio-label-span-inner">
                Herr
              </span>
            </span>
          </label>
        </div>
      </div>
      <div class="kol-input" role="presentation">
        <div class="radio-input-wrapper">
          <input accesskey="V" autocapitalize="off" autocorrect="off" class="radio" id="id-nonce" name="field" type="radio" value="-2">
          <label class="radio-label" htmlfor="id-nonce-2">
            <span>
              <span class="radio-label-span-inner">
                Divers
              </span>
            </span>
          </label>
        </div>
      </div>
    </fieldset>
  </template>
</kol-input-radio>
`;

exports[`kol-input-radio should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Value" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _orientation="horizontal" _alert=true 1`] = `
<kol-input-radio _alert="" _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <fieldset class="fieldset horizontal kol-input kol-input-radio msg-type-error" role="presentation">
      <legend class="block input-label leading-normal mb-1 w-full" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </legend>
      <div class="disabled kol-input" role="presentation">
        <div class="radio-input-wrapper">
          <input autocapitalize="off" autocorrect="off" class="disabled radio" disabled="" id="id-nonce" name="field" type="radio" value="-0">
          <label class="radio-label" htmlfor="id-nonce-0">
            <span>
              <span class="radio-label-span-inner">
                Frau
              </span>
            </span>
          </label>
        </div>
      </div>
      <div class="kol-input" role="presentation">
        <div class="radio-input-wrapper">
          <input autocapitalize="off" autocorrect="off" class="radio" id="id-nonce" name="field" type="radio" value="-1">
          <label class="radio-label" htmlfor="id-nonce-1">
            <span>
              <span class="radio-label-span-inner">
                Herr
              </span>
            </span>
          </label>
        </div>
      </div>
      <div class="kol-input" role="presentation">
        <div class="radio-input-wrapper">
          <input autocapitalize="off" autocorrect="off" class="radio" id="id-nonce" name="field" type="radio" value="-2">
          <label class="radio-label" htmlfor="id-nonce-2">
            <span>
              <span class="radio-label-span-inner">
                Divers
              </span>
            </span>
          </label>
        </div>
      </div>
    </fieldset>
  </template>
</kol-input-radio>
`;

exports[`kol-input-radio should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Value" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _orientation="horizontal" _disabled=true 1`] = `
<kol-input-radio _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <fieldset class="disabled fieldset horizontal kol-input kol-input-radio msg-type-error" role="presentation">
      <legend class="block input-label leading-normal mb-1 w-full" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </legend>
      <div class="disabled kol-input" role="presentation">
        <div class="radio-input-wrapper">
          <input autocapitalize="off" autocorrect="off" class="disabled radio" disabled="" id="id-nonce" name="field" type="radio" value="-0">
          <label class="radio-label" htmlfor="id-nonce-0">
            <span>
              <span class="radio-label-span-inner">
                Frau
              </span>
            </span>
          </label>
        </div>
      </div>
      <div class="disabled kol-input" role="presentation">
        <div class="radio-input-wrapper">
          <input autocapitalize="off" autocorrect="off" class="disabled radio" disabled="" id="id-nonce" name="field" type="radio" value="-1">
          <label class="radio-label" htmlfor="id-nonce-1">
            <span>
              <span class="radio-label-span-inner">
                Herr
              </span>
            </span>
          </label>
        </div>
      </div>
      <div class="disabled kol-input" role="presentation">
        <div class="radio-input-wrapper">
          <input autocapitalize="off" autocorrect="off" class="disabled radio" disabled="" id="id-nonce" name="field" type="radio" value="-2">
          <label class="radio-label" htmlfor="id-nonce-2">
            <span>
              <span class="radio-label-span-inner">
                Divers
              </span>
            </span>
          </label>
        </div>
      </div>
    </fieldset>
  </template>
</kol-input-radio>
`;

exports[`kol-input-radio should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Value" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _orientation="horizontal" _hint="Hint" 1`] = `
<kol-input-radio _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <fieldset class="fieldset horizontal kol-input kol-input-radio msg-type-error" role="presentation">
      <legend class="block input-label leading-normal mb-1 w-full" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </legend>
      <div class="disabled kol-input" role="presentation">
        <div class="radio-input-wrapper">
          <input aria-describedby="id-nonce-hint" autocapitalize="off" autocorrect="off" class="disabled radio" disabled="" id="id-nonce" name="field" type="radio" value="-0">
          <label class="radio-label" htmlfor="id-nonce-0">
            <span>
              <span class="radio-label-span-inner">
                Frau
              </span>
            </span>
          </label>
        </div>
      </div>
      <div class="kol-input" role="presentation">
        <div class="radio-input-wrapper">
          <input aria-describedby="id-nonce-hint" autocapitalize="off" autocorrect="off" class="radio" id="id-nonce" name="field" type="radio" value="-1">
          <label class="radio-label" htmlfor="id-nonce-1">
            <span>
              <span class="radio-label-span-inner">
                Herr
              </span>
            </span>
          </label>
        </div>
      </div>
      <div class="kol-input" role="presentation">
        <div class="radio-input-wrapper">
          <input aria-describedby="id-nonce-hint" autocapitalize="off" autocorrect="off" class="radio" id="id-nonce" name="field" type="radio" value="-2">
          <label class="radio-label" htmlfor="id-nonce-2">
            <span>
              <span class="radio-label-span-inner">
                Divers
              </span>
            </span>
          </label>
        </div>
      </div>
      <span class="hint" id="undefined-hint">
        Hint
      </span>
    </fieldset>
  </template>
</kol-input-radio>
`;

exports[`kol-input-radio should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Value" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _orientation="horizontal" _icons={"left":{"icon":"codicon codicon-arrow-left"},"right":{"icon":"codicon codicon-arrow-right"}} 1`] = `
<kol-input-radio _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <fieldset class="fieldset horizontal kol-input kol-input-radio msg-type-error" role="presentation">
      <legend class="block input-label leading-normal mb-1 w-full" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </legend>
      <div class="disabled kol-input" role="presentation">
        <div class="radio-input-wrapper">
          <input autocapitalize="off" autocorrect="off" class="disabled radio" disabled="" id="id-nonce" name="field" type="radio" value="-0">
          <label class="radio-label" htmlfor="id-nonce-0">
            <span>
              <span class="radio-label-span-inner">
                Frau
              </span>
            </span>
          </label>
        </div>
      </div>
      <div class="kol-input" role="presentation">
        <div class="radio-input-wrapper">
          <input autocapitalize="off" autocorrect="off" class="radio" id="id-nonce" name="field" type="radio" value="-1">
          <label class="radio-label" htmlfor="id-nonce-1">
            <span>
              <span class="radio-label-span-inner">
                Herr
              </span>
            </span>
          </label>
        </div>
      </div>
      <div class="kol-input" role="presentation">
        <div class="radio-input-wrapper">
          <input autocapitalize="off" autocorrect="off" class="radio" id="id-nonce" name="field" type="radio" value="-2">
          <label class="radio-label" htmlfor="id-nonce-2">
            <span>
              <span class="radio-label-span-inner">
                Divers
              </span>
            </span>
          </label>
        </div>
      </div>
    </fieldset>
  </template>
</kol-input-radio>
`;

exports[`kol-input-radio should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Value" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _orientation="horizontal" _icons={"left":{"icon":"codicon codicon-arrow-left"}} 1`] = `
<kol-input-radio _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <fieldset class="fieldset horizontal kol-input kol-input-radio msg-type-error" role="presentation">
      <legend class="block input-label leading-normal mb-1 w-full" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </legend>
      <div class="disabled kol-input" role="presentation">
        <div class="radio-input-wrapper">
          <input autocapitalize="off" autocorrect="off" class="disabled radio" disabled="" id="id-nonce" name="field" type="radio" value="-0">
          <label class="radio-label" htmlfor="id-nonce-0">
            <span>
              <span class="radio-label-span-inner">
                Frau
              </span>
            </span>
          </label>
        </div>
      </div>
      <div class="kol-input" role="presentation">
        <div class="radio-input-wrapper">
          <input autocapitalize="off" autocorrect="off" class="radio" id="id-nonce" name="field" type="radio" value="-1">
          <label class="radio-label" htmlfor="id-nonce-1">
            <span>
              <span class="radio-label-span-inner">
                Herr
              </span>
            </span>
          </label>
        </div>
      </div>
      <div class="kol-input" role="presentation">
        <div class="radio-input-wrapper">
          <input autocapitalize="off" autocorrect="off" class="radio" id="id-nonce" name="field" type="radio" value="-2">
          <label class="radio-label" htmlfor="id-nonce-2">
            <span>
              <span class="radio-label-span-inner">
                Divers
              </span>
            </span>
          </label>
        </div>
      </div>
    </fieldset>
  </template>
</kol-input-radio>
`;

exports[`kol-input-radio should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Value" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _orientation="horizontal" _icons={"right":{"icon":"codicon codicon-arrow-right"}} 1`] = `
<kol-input-radio _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <fieldset class="fieldset horizontal kol-input kol-input-radio msg-type-error" role="presentation">
      <legend class="block input-label leading-normal mb-1 w-full" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </legend>
      <div class="disabled kol-input" role="presentation">
        <div class="radio-input-wrapper">
          <input autocapitalize="off" autocorrect="off" class="disabled radio" disabled="" id="id-nonce" name="field" type="radio" value="-0">
          <label class="radio-label" htmlfor="id-nonce-0">
            <span>
              <span class="radio-label-span-inner">
                Frau
              </span>
            </span>
          </label>
        </div>
      </div>
      <div class="kol-input" role="presentation">
        <div class="radio-input-wrapper">
          <input autocapitalize="off" autocorrect="off" class="radio" id="id-nonce" name="field" type="radio" value="-1">
          <label class="radio-label" htmlfor="id-nonce-1">
            <span>
              <span class="radio-label-span-inner">
                Herr
              </span>
            </span>
          </label>
        </div>
      </div>
      <div class="kol-input" role="presentation">
        <div class="radio-input-wrapper">
          <input autocapitalize="off" autocorrect="off" class="radio" id="id-nonce" name="field" type="radio" value="-2">
          <label class="radio-label" htmlfor="id-nonce-2">
            <span>
              <span class="radio-label-span-inner">
                Divers
              </span>
            </span>
          </label>
        </div>
      </div>
    </fieldset>
  </template>
</kol-input-radio>
`;

exports[`kol-input-radio should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Value" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _orientation="horizontal" _msg={"_type":"error","_description":"Es ist ein Fehler aufgetreten"} _hideError=true 1`] = `
<kol-input-radio _hide-error="" _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <fieldset class="fieldset hidden-error horizontal kol-input kol-input-radio msg-type-error" role="presentation">
      <legend class="block input-label leading-normal mb-1 w-full" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </legend>
      <div class="disabled hidden-error kol-input" role="presentation">
        <div class="radio-input-wrapper">
          <input autocapitalize="off" autocorrect="off" class="disabled radio" disabled="" id="id-nonce" name="field" type="radio" value="-0">
          <label class="radio-label" htmlfor="id-nonce-0">
            <span>
              <span class="radio-label-span-inner">
                Frau
              </span>
            </span>
          </label>
        </div>
      </div>
      <div class="hidden-error kol-input" role="presentation">
        <div class="radio-input-wrapper">
          <input autocapitalize="off" autocorrect="off" class="radio" id="id-nonce" name="field" type="radio" value="-1">
          <label class="radio-label" htmlfor="id-nonce-1">
            <span>
              <span class="radio-label-span-inner">
                Herr
              </span>
            </span>
          </label>
        </div>
      </div>
      <div class="hidden-error kol-input" role="presentation">
        <div class="radio-input-wrapper">
          <input autocapitalize="off" autocorrect="off" class="radio" id="id-nonce" name="field" type="radio" value="-2">
          <label class="radio-label" htmlfor="id-nonce-2">
            <span>
              <span class="radio-label-span-inner">
                Divers
              </span>
            </span>
          </label>
        </div>
      </div>
    </fieldset>
  </template>
</kol-input-radio>
`;

exports[`kol-input-radio should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Value" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _orientation="horizontal" _msg={"_type":"error","_description":"Es ist ein Fehler aufgetreten"} 1`] = `
<kol-input-radio _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <fieldset class="fieldset horizontal kol-input kol-input-radio msg-type-error" role="presentation">
      <legend class="block input-label leading-normal mb-1 w-full" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </legend>
      <div class="disabled kol-input" role="presentation">
        <div class="radio-input-wrapper">
          <input autocapitalize="off" autocorrect="off" class="disabled radio" disabled="" id="id-nonce" name="field" type="radio" value="-0">
          <label class="radio-label" htmlfor="id-nonce-0">
            <span>
              <span class="radio-label-span-inner">
                Frau
              </span>
            </span>
          </label>
        </div>
      </div>
      <div class="kol-input" role="presentation">
        <div class="radio-input-wrapper">
          <input autocapitalize="off" autocorrect="off" class="radio" id="id-nonce" name="field" type="radio" value="-1">
          <label class="radio-label" htmlfor="id-nonce-1">
            <span>
              <span class="radio-label-span-inner">
                Herr
              </span>
            </span>
          </label>
        </div>
      </div>
      <div class="kol-input" role="presentation">
        <div class="radio-input-wrapper">
          <input autocapitalize="off" autocorrect="off" class="radio" id="id-nonce" name="field" type="radio" value="-2">
          <label class="radio-label" htmlfor="id-nonce-2">
            <span>
              <span class="radio-label-span-inner">
                Divers
              </span>
            </span>
          </label>
        </div>
      </div>
    </fieldset>
  </template>
</kol-input-radio>
`;

exports[`kol-input-radio should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Value" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _orientation="horizontal" _readOnly=true 1`] = `
<kol-input-radio _placeholder="Hier steht ein Platzhaltertext" _readonly="">
  <template shadowrootmode="open">
    <fieldset class="fieldset horizontal kol-input kol-input-radio msg-type-error" role="presentation">
      <legend class="block input-label leading-normal mb-1 w-full" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </legend>
      <div class="disabled kol-input" role="presentation">
        <div class="radio-input-wrapper">
          <input autocapitalize="off" autocorrect="off" class="disabled radio" disabled="" id="id-nonce" name="field" type="radio" value="-0">
          <label class="radio-label" htmlfor="id-nonce-0">
            <span>
              <span class="radio-label-span-inner">
                Frau
              </span>
            </span>
          </label>
        </div>
      </div>
      <div class="kol-input" role="presentation">
        <div class="radio-input-wrapper">
          <input autocapitalize="off" autocorrect="off" class="radio" id="id-nonce" name="field" type="radio" value="-1">
          <label class="radio-label" htmlfor="id-nonce-1">
            <span>
              <span class="radio-label-span-inner">
                Herr
              </span>
            </span>
          </label>
        </div>
      </div>
      <div class="kol-input" role="presentation">
        <div class="radio-input-wrapper">
          <input autocapitalize="off" autocorrect="off" class="radio" id="id-nonce" name="field" type="radio" value="-2">
          <label class="radio-label" htmlfor="id-nonce-2">
            <span>
              <span class="radio-label-span-inner">
                Divers
              </span>
            </span>
          </label>
        </div>
      </div>
    </fieldset>
  </template>
</kol-input-radio>
`;

exports[`kol-input-radio should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Value" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _orientation="horizontal" _shortKey="S" 1`] = `
<kol-input-radio _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <fieldset class="fieldset horizontal kol-input kol-input-radio msg-type-error" role="presentation">
      <legend class="block input-label leading-normal mb-1 w-full" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          Label
          <span aria-hidden="true" class="access-key-hint">
            S
          </span>
        </span>
      </legend>
      <div class="disabled kol-input" role="presentation">
        <div class="radio-input-wrapper">
          <input autocapitalize="off" autocorrect="off" class="disabled radio" disabled="" id="id-nonce" name="field" type="radio" value="-0">
          <label class="radio-label" htmlfor="id-nonce-0">
            <span>
              <span class="radio-label-span-inner">
                Frau
              </span>
            </span>
          </label>
        </div>
      </div>
      <div class="kol-input" role="presentation">
        <div class="radio-input-wrapper">
          <input autocapitalize="off" autocorrect="off" class="radio" id="id-nonce" name="field" type="radio" value="-1">
          <label class="radio-label" htmlfor="id-nonce-1">
            <span>
              <span class="radio-label-span-inner">
                Herr
              </span>
            </span>
          </label>
        </div>
      </div>
      <div class="kol-input" role="presentation">
        <div class="radio-input-wrapper">
          <input autocapitalize="off" autocorrect="off" class="radio" id="id-nonce" name="field" type="radio" value="-2">
          <label class="radio-label" htmlfor="id-nonce-2">
            <span>
              <span class="radio-label-span-inner">
                Divers
              </span>
            </span>
          </label>
        </div>
      </div>
    </fieldset>
  </template>
</kol-input-radio>
`;

exports[`kol-input-radio should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Value" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _orientation="horizontal" _touched=true 1`] = `
<kol-input-radio _placeholder="Hier steht ein Platzhaltertext" _touched="">
  <template shadowrootmode="open">
    <fieldset class="fieldset horizontal kol-input kol-input-radio msg-type-error touched" role="presentation">
      <legend class="block input-label leading-normal mb-1 w-full" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </legend>
      <div class="disabled kol-input touched" role="presentation">
        <div class="radio-input-wrapper">
          <input autocapitalize="off" autocorrect="off" class="disabled radio" disabled="" id="id-nonce" name="field" type="radio" value="-0">
          <label class="radio-label" htmlfor="id-nonce-0">
            <span>
              <span class="radio-label-span-inner">
                Frau
              </span>
            </span>
          </label>
        </div>
      </div>
      <div class="kol-input touched" role="presentation">
        <div class="radio-input-wrapper">
          <input autocapitalize="off" autocorrect="off" class="radio" id="id-nonce" name="field" type="radio" value="-1">
          <label class="radio-label" htmlfor="id-nonce-1">
            <span>
              <span class="radio-label-span-inner">
                Herr
              </span>
            </span>
          </label>
        </div>
      </div>
      <div class="kol-input touched" role="presentation">
        <div class="radio-input-wrapper">
          <input autocapitalize="off" autocorrect="off" class="radio" id="id-nonce" name="field" type="radio" value="-2">
          <label class="radio-label" htmlfor="id-nonce-2">
            <span>
              <span class="radio-label-span-inner">
                Divers
              </span>
            </span>
          </label>
        </div>
      </div>
    </fieldset>
  </template>
</kol-input-radio>
`;

exports[`kol-input-radio should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Value" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _orientation="horizontal" 1`] = `
<kol-input-radio _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <fieldset class="fieldset horizontal kol-input kol-input-radio msg-type-error" role="presentation">
      <legend class="block input-label leading-normal mb-1 w-full" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </legend>
      <div class="disabled kol-input" role="presentation">
        <div class="radio-input-wrapper">
          <input autocapitalize="off" autocorrect="off" class="disabled radio" disabled="" id="id-nonce" name="field" type="radio" value="-0">
          <label class="radio-label" htmlfor="id-nonce-0">
            <span>
              <span class="radio-label-span-inner">
                Frau
              </span>
            </span>
          </label>
        </div>
      </div>
      <div class="kol-input" role="presentation">
        <div class="radio-input-wrapper">
          <input autocapitalize="off" autocorrect="off" class="radio" id="id-nonce" name="field" type="radio" value="-1">
          <label class="radio-label" htmlfor="id-nonce-1">
            <span>
              <span class="radio-label-span-inner">
                Herr
              </span>
            </span>
          </label>
        </div>
      </div>
      <div class="kol-input" role="presentation">
        <div class="radio-input-wrapper">
          <input autocapitalize="off" autocorrect="off" class="radio" id="id-nonce" name="field" type="radio" value="-2">
          <label class="radio-label" htmlfor="id-nonce-2">
            <span>
              <span class="radio-label-span-inner">
                Divers
              </span>
            </span>
          </label>
        </div>
      </div>
    </fieldset>
  </template>
</kol-input-radio>
`;

exports[`kol-input-radio should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Value" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _readOnly=true 1`] = `
<kol-input-radio _placeholder="Hier steht ein Platzhaltertext" _readonly="">
  <template shadowrootmode="open">
    <fieldset class="fieldset kol-input kol-input-radio msg-type-error vertical" role="presentation">
      <legend class="block input-label leading-normal mb-1 w-full" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </legend>
      <div class="disabled kol-input" role="presentation">
        <div class="radio-input-wrapper">
          <input autocapitalize="off" autocorrect="off" class="disabled radio" disabled="" id="id-nonce" name="field" type="radio" value="-0">
          <label class="radio-label" htmlfor="id-nonce-0">
            <span>
              <span class="radio-label-span-inner">
                Frau
              </span>
            </span>
          </label>
        </div>
      </div>
      <div class="kol-input" role="presentation">
        <div class="radio-input-wrapper">
          <input autocapitalize="off" autocorrect="off" class="radio" id="id-nonce" name="field" type="radio" value="-1">
          <label class="radio-label" htmlfor="id-nonce-1">
            <span>
              <span class="radio-label-span-inner">
                Herr
              </span>
            </span>
          </label>
        </div>
      </div>
      <div class="kol-input" role="presentation">
        <div class="radio-input-wrapper">
          <input autocapitalize="off" autocorrect="off" class="radio" id="id-nonce" name="field" type="radio" value="-2">
          <label class="radio-label" htmlfor="id-nonce-2">
            <span>
              <span class="radio-label-span-inner">
                Divers
              </span>
            </span>
          </label>
        </div>
      </div>
    </fieldset>
  </template>
</kol-input-radio>
`;

exports[`kol-input-radio should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Value" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _shortKey="S" 1`] = `
<kol-input-radio _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <fieldset class="fieldset kol-input kol-input-radio msg-type-error vertical" role="presentation">
      <legend class="block input-label leading-normal mb-1 w-full" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          Label
          <span aria-hidden="true" class="access-key-hint">
            S
          </span>
        </span>
      </legend>
      <div class="disabled kol-input" role="presentation">
        <div class="radio-input-wrapper">
          <input autocapitalize="off" autocorrect="off" class="disabled radio" disabled="" id="id-nonce" name="field" type="radio" value="-0">
          <label class="radio-label" htmlfor="id-nonce-0">
            <span>
              <span class="radio-label-span-inner">
                Frau
              </span>
            </span>
          </label>
        </div>
      </div>
      <div class="kol-input" role="presentation">
        <div class="radio-input-wrapper">
          <input autocapitalize="off" autocorrect="off" class="radio" id="id-nonce" name="field" type="radio" value="-1">
          <label class="radio-label" htmlfor="id-nonce-1">
            <span>
              <span class="radio-label-span-inner">
                Herr
              </span>
            </span>
          </label>
        </div>
      </div>
      <div class="kol-input" role="presentation">
        <div class="radio-input-wrapper">
          <input autocapitalize="off" autocorrect="off" class="radio" id="id-nonce" name="field" type="radio" value="-2">
          <label class="radio-label" htmlfor="id-nonce-2">
            <span>
              <span class="radio-label-span-inner">
                Divers
              </span>
            </span>
          </label>
        </div>
      </div>
    </fieldset>
  </template>
</kol-input-radio>
`;

exports[`kol-input-radio should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Value" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _touched=true 1`] = `
<kol-input-radio _placeholder="Hier steht ein Platzhaltertext" _touched="">
  <template shadowrootmode="open">
    <fieldset class="fieldset kol-input kol-input-radio msg-type-error touched vertical" role="presentation">
      <legend class="block input-label leading-normal mb-1 w-full" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </legend>
      <div class="disabled kol-input touched" role="presentation">
        <div class="radio-input-wrapper">
          <input autocapitalize="off" autocorrect="off" class="disabled radio" disabled="" id="id-nonce" name="field" type="radio" value="-0">
          <label class="radio-label" htmlfor="id-nonce-0">
            <span>
              <span class="radio-label-span-inner">
                Frau
              </span>
            </span>
          </label>
        </div>
      </div>
      <div class="kol-input touched" role="presentation">
        <div class="radio-input-wrapper">
          <input autocapitalize="off" autocorrect="off" class="radio" id="id-nonce" name="field" type="radio" value="-1">
          <label class="radio-label" htmlfor="id-nonce-1">
            <span>
              <span class="radio-label-span-inner">
                Herr
              </span>
            </span>
          </label>
        </div>
      </div>
      <div class="kol-input touched" role="presentation">
        <div class="radio-input-wrapper">
          <input autocapitalize="off" autocorrect="off" class="radio" id="id-nonce" name="field" type="radio" value="-2">
          <label class="radio-label" htmlfor="id-nonce-2">
            <span>
              <span class="radio-label-span-inner">
                Divers
              </span>
            </span>
          </label>
        </div>
      </div>
    </fieldset>
  </template>
</kol-input-radio>
`;

exports[`kol-input-radio should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Value" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] 1`] = `
<kol-input-radio _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <fieldset class="fieldset kol-input kol-input-radio msg-type-error vertical" role="presentation">
      <legend class="block input-label leading-normal mb-1 w-full" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </legend>
      <div class="disabled kol-input" role="presentation">
        <div class="radio-input-wrapper">
          <input autocapitalize="off" autocorrect="off" class="disabled radio" disabled="" id="id-nonce" name="field" type="radio" value="-0">
          <label class="radio-label" htmlfor="id-nonce-0">
            <span>
              <span class="radio-label-span-inner">
                Frau
              </span>
            </span>
          </label>
        </div>
      </div>
      <div class="kol-input" role="presentation">
        <div class="radio-input-wrapper">
          <input autocapitalize="off" autocorrect="off" class="radio" id="id-nonce" name="field" type="radio" value="-1">
          <label class="radio-label" htmlfor="id-nonce-1">
            <span>
              <span class="radio-label-span-inner">
                Herr
              </span>
            </span>
          </label>
        </div>
      </div>
      <div class="kol-input" role="presentation">
        <div class="radio-input-wrapper">
          <input autocapitalize="off" autocorrect="off" class="radio" id="id-nonce" name="field" type="radio" value="-2">
          <label class="radio-label" htmlfor="id-nonce-2">
            <span>
              <span class="radio-label-span-inner">
                Divers
              </span>
            </span>
          </label>
        </div>
      </div>
    </fieldset>
  </template>
</kol-input-radio>
`;
